<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".VerifyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dimen32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen16"
            android:text="@string/label_text_verify"
            android:textColor="#fff"
            android:textSize="@dimen/font32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen64"
            android:gravity="center"
            android:text="@string/label_text_verify_desc"
            android:textColor="#fff" />

        <EditText
            style="@style/EditTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen24"
            android:backgroundTint="@color/colorBackground"
            android:gravity="center"
            android:hint="@string/label_hint_verif_code"
            android:inputType="text" />

        <Button
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dimen16"
            android:text="@string/label_button_send"
            android:onClick="goToUserHome"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_dont_have_code"
            android:textColor="#fff" />

    </LinearLayout>


</RelativeLayout>