<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadowHeader" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen32">

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_username"
                android:inputType="text"
                android:paddingTop="0dp" />

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_email"
                android:inputType="textWebEmailAddress" />

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_phone"
                android:inputType="phone" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dimen8"
                android:paddingTop="@dimen/dimen16"
                android:paddingRight="@dimen/dimen8"
                android:paddingBottom="@dimen/dimen16">

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_radio_male" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_radio_female" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    style="@style/Spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:entries="@array/entry_spinner_blood_type" />

                <Spinner
                    style="@style/Spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:entries="@array/entry_spinner_reshus" />

            </LinearLayout>

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_password"
                android:inputType="textWebPassword" />

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_repassword"
                android:inputType="textWebPassword" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dimen8"
                android:paddingTop="@dimen/dimen16"
                android:paddingRight="@dimen/dimen8"
                android:paddingBottom="@dimen/dimen16">

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_radio_personal" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_radio_organization" />

            </RadioGroup>

            <Spinner
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/entry_spinner_job" />

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_address"
                android:inputType="text" />

            <EditText
                style="@style/EditTextGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_location"
                android:hint="@string/label_hint_location"
                android:inputType="text" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen24"
                android:layout_marginBottom="@dimen/dimen24"
                android:button="@drawable/bg_checkbox"
                android:paddingLeft="@dimen/dimen18"
                android:paddingRight="@dimen/dimen32"
                android:text="@string/label_check_agreement"
                android:textColor="@color/colorFontInput" />

            <Button
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToAlmostThere"
                android:text="@string/label_button_register" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>