<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dimen32">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen16"
            android:src="@drawable/ic_welcome_logo" />

        <EditText
            style="@style/EditTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackground"
            android:hint="@string/label_hint_username"
            android:inputType="text" />

        <EditText
            style="@style/EditTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen32"
            android:backgroundTint="@color/colorBackground"
            android:hint="@string/label_hint_password"
            android:inputType="textWebPassword" />

        <Button
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dimen16"
            android:text="@string/label_button_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen16"
            android:text="OR"
            android:textColor="#fff" />

        <Button
            style="@style/ButtonIconWhite"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dimen16"
            android:drawableLeft="@drawable/ic_facebook"
            android:gravity="left"
            android:text="@string/label_button_login_fb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_dont_have_account_register"
            android:textColor="#fff"
            android:onClick="goToRegister"/>

    </LinearLayout>

</RelativeLayout>