<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".AlmostThereActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dimen32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen16"
            android:text="@string/label_text_almost_there"
            android:textColor="#fff"
            android:textSize="@dimen/font32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen86"
            android:gravity="center"
            android:text="@string/label_text_almost_there_desc"
            android:textColor="#fff" />

        <Button
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:text="@string/label_button_verify"
            android:onClick="goToVerify"/>

    </LinearLayout>


</RelativeLayout>